fix overflow problem

--- a/public/css/_floating-utility-row.sass
+++ b/public/css/_floating-utility-row.sass
@@ -1,7 +1,13 @@
-.floating-utility-row
+.floating-utility-row-container
+  overflow: hidden
   position: absolute
   top: 4px
   right: 0
+
+.floating-utility-row
+  // position: absolute
+  // top: 4px
+  // right: 0
   color: $dk-grey
   opacity: 0
   +transform(translate3d(0, 100%, 0))
