--- a/public/css/_title-row.sass
+++ b/public/css/_title-row.sass
@@ -6,7 +6,7 @@
   height: $title-row-height
   z-index: 120
   background: white
-  overflow: hidden
+  // overflow: hidden
 
   .share-block,
   .utility-block
